--- a/.gitignore
+++ b/.gitignore
@@ -149,3 +149,69 @@ po/*~
 
 # RStudio Connect folder
 rsconnect/
+data/demux
+data/fastqc/raw/29_4E_fox_S21_L008_R1_001_fastqc.zip
+data/fastqc/raw/29_4E_fox_S21_L008_R2_001_fastqc.zip
+data/fastqc/raw/Undetermined_S0_L008_R1_001_fastqc.zip
+data/fastqc/raw/Undetermined_S0_L008_R2_001_fastqc.zip
+data/fastqc/raw/multiqc_data/fastqc_adapter_content_plot.txt
+data/fastqc/raw/multiqc_data/fastqc_overrepresented_sequences_plot.txt
+data/fastqc/raw/multiqc_data/fastqc_per_base_n_content_plot.txt
+data/fastqc/raw/multiqc_data/fastqc_per_base_sequence_quality_plot.txt
+data/fastqc/raw/multiqc_data/fastqc_per_sequence_gc_content_plot_Counts.txt
+data/fastqc/raw/multiqc_data/fastqc_per_sequence_gc_content_plot_Percentages.txt
+data/fastqc/raw/multiqc_data/fastqc_per_sequence_quality_scores_plot.txt
+data/fastqc/raw/multiqc_data/fastqc_sequence_counts_plot.txt
+data/fastqc/raw/multiqc_data/fastqc_sequence_duplication_levels_plot.txt
+data/fastqc/raw/multiqc_data/fastqc_top_overrepresented_sequences_table.txt
+data/fastqc/raw/multiqc_data/fastqc-status-check-heatmap.txt
+data/fastqc/raw/multiqc_data/multiqc_citations.txt
+data/fastqc/raw/multiqc_data/multiqc_data.json
+data/fastqc/raw/multiqc_data/multiqc_fastqc.txt
+data/fastqc/raw/multiqc_data/multiqc_general_stats.txt
+data/fastqc/raw/multiqc_data/multiqc_software_versions.txt
+data/fastqc/raw/multiqc_data/multiqc_sources.txt
+data/fastqc/trim/29_4E_fox_S21_L008_R1_001.cut.paired_fastqc.zip
+data/fastqc/trim/29_4E_fox_S21_L008_R2_001.cut.paired_fastqc.zip
+data/fastqc/trim/Undetermined_S0_L008_R1_001.cut.paired_fastqc.zip
+data/fastqc/trim/Undetermined_S0_L008_R2_001.cut.paired_fastqc.zip
+data/fastqc/trim/multiqc_data/fastqc_adapter_content_plot.txt
+data/fastqc/trim/multiqc_data/fastqc_overrepresented_sequences_plot.txt
+data/fastqc/trim/multiqc_data/fastqc_per_base_n_content_plot.txt
+data/fastqc/trim/multiqc_data/fastqc_per_base_sequence_quality_plot.txt
+data/fastqc/trim/multiqc_data/fastqc_per_sequence_gc_content_plot_Counts.txt
+data/fastqc/trim/multiqc_data/fastqc_per_sequence_gc_content_plot_Percentages.txt
+data/fastqc/trim/multiqc_data/fastqc_per_sequence_quality_scores_plot.txt
+data/fastqc/trim/multiqc_data/fastqc_sequence_counts_plot.txt
+data/fastqc/trim/multiqc_data/fastqc_sequence_duplication_levels_plot.txt
+data/fastqc/trim/multiqc_data/fastqc_sequence_length_distribution_plot.txt
+data/fastqc/trim/multiqc_data/fastqc_top_overrepresented_sequences_table.txt
+data/fastqc/trim/multiqc_data/fastqc-status-check-heatmap.txt
+data/fastqc/trim/multiqc_data/multiqc_citations.txt
+data/fastqc/trim/multiqc_data/multiqc_data.json
+data/fastqc/trim/multiqc_data/multiqc_fastqc.txt
+data/fastqc/trim/multiqc_data/multiqc_general_stats.txt
+data/fastqc/trim/multiqc_data/multiqc_software_versions.txt
+data/fastqc/trim/multiqc_data/multiqc_sources.txt
+data/ref/libraryAssingments.txt
+data/ref/Mus_musculus.GRCm39.dna.primary_assembly.fa
+data/star/29_4E_fox_S21Log.final.out
+data/star/29_4E_fox_S21Log.out
+data/star/29_4E_fox_S21Log.progress.out
+data/star/Undetermined_S0Log.final.out
+data/star/Undetermined_S0Log.out
+data/star/Undetermined_S0Log.progress.out
+data/star/genome/chrLength.txt
+data/star/genome/chrName.txt
+data/star/genome/chrNameLength.txt
+data/star/genome/chrStart.txt
+data/star/genome/exonGeTrInfo.tab
+data/star/genome/exonInfo.tab
+data/star/genome/geneInfo.tab
+data/star/genome/Genome
+data/star/genome/genomeParameters.txt
+data/star/genome/Log.out
+data/star/genome/SA
+data/star/genome/SAindex
+data/star/genome/sjdbInfo.txt
+data/star/genome/transcriptInfo.tab
