updating gitignore for cleanliness

--- a/.gitignore
+++ b/.gitignore
@@ -215,3 +215,26 @@ data/star/genome/SA
 data/star/genome/SAindex
 data/star/genome/sjdbInfo.txt
 data/star/genome/transcriptInfo.tab
+temp.txt
+logs/lenPlots_16103453.txt
+logs/lenPlots_16112330.txt
+report/29_4E_fox_S21_L008_R1_001_hist.png
+report/29_4E_fox_S21_L008_R2_001_hist.png
+report/fastqc_adapter_content_plot_raw.png
+report/fastqc_adapter_content_plot_trim.png
+report/fastqc_per_base_n_content_plot_raw.png
+report/fastqc_per_base_n_content_plot_trim.png
+report/fastqc_per_base_sequence_quality_plot_raw.png
+report/fastqc_per_base_sequence_quality_plot_trim.png
+report/PerN_29_4E_fox_R1.png
+report/PerN_29_4E_fox_R2.png
+report/PerN_Undetermined_R1.png
+report/PerN_Undetermined_R2.png
+report/QAA_report.pdf
+report/QAA_report.Rmd
+report/SeqQual_29_4E_fox_R1.png
+report/SeqQual_29_4E_fox_R2.png
+report/SeqQual_Undetermined_R1.png
+report/SeqQual_Undetermined_R2.png
+report/Undetermined_S0_L008_R1_001_hist.png
+report/Undetermined_S0_L008_R2_001_hist.png
